--- a/02-webpack/package.json
+++ b/02-webpack/package.json
@@ -4,12 +4,15 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "build": "webpack"
+    "build": "webpack",
+    "dev": "webpack-dev-server"
   },
   "devDependencies": {
-    "ts-loader": "^9.2.6",
-    "typescript": "^4.5.3",
-    "webpack": "^5.65.0",
-    "webpack-cli": "^4.9.1"
+    "html-webpack-plugin": "^5.5.0",
+    "ts-loader": "^9.4.2",
+    "typescript": "^4.9.5",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.1"
   }
 }
